- added configuration via json - support for more tabs - work in progress

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Jac
+application.vendor=root
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Jac.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.jackson-annotations-2.6.3.jar=../lib/jackson/jackson-annotations-2.6.3.jar
+file.reference.jackson-core-2.6.3.jar=../lib/jackson/jackson-core-2.6.3.jar
+file.reference.jackson-databind-2.6.3.jar=../lib/jackson/jackson-databind-2.6.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jackson-annotations-2.6.3.jar}:\
+    ${file.reference.jackson-core-2.6.3.jar}:\
+    ${file.reference.jackson-databind-2.6.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -50,6 +58,9 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.jackson-annotations-2.6.3.jar=../lib/jackson/jackson-annotations-2.6.3-javadoc.jar
+javadoc.reference.jackson-core-2.6.3.jar=../lib/jackson/jackson-core-2.6.3-javadoc.jar
+javadoc.reference.jackson-databind-2.6.3.jar=../lib/jackson/jackson-databind-2.6.3-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
